fixed the spacing between the first and second row of partners on partners.html

--- a/css/partners-stylesheet.css
+++ b/css/partners-stylesheet.css
@@ -65,7 +65,7 @@ div.partner-description-container p{
 	    	max-width: 1070px;
     }
 	section#our-partners div.row:first-child{
-		margin-bottom: 40px;
+		margin-bottom: 80px;
 	}
 	div.partner-container{
 		margin: 0 auto;
